--- a/style.css
+++ b/style.css
@@ -1,33 +1,53 @@
-ul {
-    background-color: #f1f1f1;
-    list-style-type: none;
+body {
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+ }
+
+ h1{
+    color: #2E8B57;
+ }
+
+ .menuDiv{
+    background-color: #f1f1f1;
+    margin: 0;
+    padding: 0;
+    width: 27%;
+    height: 100%;
+    position: fixed;
+    overflow: auto;
+ }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 10px;
     width: 25%;
     height: 100%;
     position: fixed;
     overflow: auto;
+    font-weight: bold;
 }
 
 li a {
     text-align: center;
     display: block;
     color: #000;
-    padding: 8px 16px;
+    padding: 8px;
     text-decoration: none;
 }
 
 li a:hover {
+    background-color: #2E8B57;
+    color: white;
+}
+
+li a:active {
     background-color: #555;
     color: white;
 }
 
-.active {
-    background-color: #3F704D;
-    color: white;
-}
-
-div.ex1{
+.homeDiv{
     float: right;
-    width: 75%;
+    width: 70%;
 }
