--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.8;
     font-size: 14px;
+    color: whitesmoke;
  }
 
  h1{
@@ -11,7 +12,8 @@ body {
  }
 
  .menuDiv{
-    background-color: #f1f1f1;
+    background-color: #292929;
+    color: whitesmoke;
     margin: 0;
     padding: 0;
     width: 27%;
@@ -34,26 +36,29 @@ body {
 li a {
     text-align: center;
     display: block;
-    color: #000;
+    color: whitesmoke;
     padding: 8px;
     text-decoration: none;
 }
 
 li a:hover {
     background-color: #2E8B57;
-    color: white;
+    color: whitesmoke;
 }
 
 li a:active {
     background-color: #555;
-    color: white;
+    color: whitesmoke;
 }
 
 .homeDiv{
     float: right;
-    width: 68%;
-    padding-right: 40px;
-    padding-left: 0px;
+    width: 69%;
+    padding-right: 2%;
+    padding-left: 2%;
+    background-color: #deffec;
+    height: 100vh;
+    color: black;
 }
 
 .Emily {
@@ -68,7 +73,7 @@ li a:active {
 }
 
 .fa {
-    color: black;
+    color: whitesmoke;
     padding: 20px;
     text-decoration: none;
 }
