--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ body {
     overflow: auto;
  }
 
+.menuDiv h1{
+    font-size: 3vw;
+}
+
 .menuList {
     list-style-type: none;
     margin: 0;
@@ -70,6 +74,7 @@ li a:active {
 .socialIcons{
     position: absolute;
     bottom: 0;
+    width: 100%;
 }
 
 .fa {
