Added comm involvement page content and links

--- a/style.css
+++ b/style.css
@@ -123,3 +123,12 @@ h3 {
  .credly a:hover{
     background: #292929;
  }
+
+ .commlinks{
+    background-color:#2E8B57;
+    padding: 4px;
+    width: fit-content;
+    color: whitesmoke;
+    font-size:20px;
+    text-decoration: none;
+ }
