--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
+.emilyheadshot {
+    float: left;
+    margin-right: 20px;
+    max-width: 50%;
+    height: auto;
+}
+
+h1 { 
+    font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace; 
+    font-size: clamp(1.25rem, 2.5vw, 3rem);
+    font-style: normal; 
+    font-variant: normal; 
+    font-weight: 700; 
+    line-height: 26.4px;
+    color: #2E8B57 }
+
+
+
 body {
     margin: 0;
     padding: 0;
@@ -7,9 +25,16 @@ body {
     color: whitesmoke;
  }
 
- h1{
-    color: #2E8B57;
- }
+ h2 {
+    margin-bottom: 0;
+}
+
+h3 {
+    margin-bottom: 0;
+    margin-top: 0;
+    color: grey;
+}
+
 
  .menuDiv{
     background-color: #292929;
@@ -21,10 +46,6 @@ body {
     position: fixed;
     overflow: auto;
  }
-
-.menuDiv h1{
-    font-size: 3vw;
-}
 
 .menuList {
     list-style-type: none;
@@ -65,12 +86,7 @@ li a:active {
     color: black;
 }
 
-.emilyheadshot {
-    float: left;
-    margin-right: 20px;
-    max-width: 50%;
-    height: auto;
-}
+
 
 .socialIcons{
     position: absolute;
@@ -88,15 +104,6 @@ li a:active {
     color: #2E8B57;
 }
 
-h2 {
-    margin-bottom: 0;
-}
-
-h3 {
-    margin-bottom: 0;
-    margin-top: 0;
-    color: grey;
-}
 
 .certList {
     margin-left:10px;
