--- a/style.css
+++ b/style.css
@@ -11,9 +11,32 @@ h1 {
     font-style: normal; 
     font-variant: normal; 
     font-weight: 700; 
-    line-height: 26.4px;
+    line-height: 28px;
     color: #2E8B57 }
 
+ h2 {
+    font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace; 
+    font-style: normal; 
+    font-variant: normal;
+    font-weight: 700; 
+    margin-bottom: 0;
+    line-height: 22px;
+}
+
+h3 { font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace; 
+    font-size: 14px; 
+    font-style: normal; 
+    font-variant: normal; 
+    font-weight: 700; 
+    line-height: 16px; }
+
+blockquote { 
+    font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace; 
+    font-size: 21px;
+    font-style: normal; 
+    font-variant: normal; 
+    font-weight: 400; 
+    line-height: 30px; }
 
 
 body {
@@ -25,9 +48,7 @@ body {
     color: whitesmoke;
  }
 
- h2 {
-    margin-bottom: 0;
-}
+
 
 h3 {
     margin-bottom: 0;
