--- a/style.css
+++ b/style.css
@@ -42,11 +42,11 @@ blockquote {
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
     line-height: 1.8;
     font-size: 14px;
     color: whitesmoke;
- }
+}
 
 
 
