--- a/style.css
+++ b/style.css
@@ -24,11 +24,11 @@ h1 {
 }
 
 h3 { font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace; 
-    font-size: 14px; 
     font-style: normal; 
     font-variant: normal; 
     font-weight: 700; 
-    line-height: 16px; }
+    line-height: 18px; 
+    color: grey;}
 
 blockquote { 
     font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace; 
@@ -50,11 +50,6 @@ body {
 
 
 
-h3 {
-    margin-bottom: 0;
-    margin-top: 0;
-    color: grey;
-}
 
 
  .menuDiv{
