--- a/style.css
+++ b/style.css
@@ -87,11 +87,16 @@ body {
 
 .button{
     background-color:#2E8B57;
-    padding: 4px;
+    padding: 6px;
     width: fit-content;
     color: whitesmoke;
     font-size:20px;
-    text-decoration: none; }
+    font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace; 
+    font-style: normal; 
+    font-variant: normal;
+    font-weight: 700;
+    text-decoration: none;
+    line-height: 45px; }
 
 
 
