--- a/style.css
+++ b/style.css
@@ -83,7 +83,9 @@ body {
     color: whitesmoke;
     padding: 10px;
     height: auto;
-    width: 50%; }
+    width: 50%;
+    padding: 20px;
+ }
 
 .pagesection h2{
     color:#deffec;
@@ -104,7 +106,6 @@ body {
 #home {
     float: right;
     width: 50%;
-    padding: 20px;
 }
 
 .button{
