--- a/style.css
+++ b/style.css
@@ -115,8 +115,7 @@ body {
     float: right; }
 
 #member {
-    margin-right: 2%;
-}
+    margin-right: 2%; }
 
 #certification {
     width: fit-content;
